# booklyst-core

./: .gitignore  Cargo.toml  Makefile  go.mod  go.sum  main.go  routes.go  sqlc.yaml
controllers/: address_controller.go  app_config.go  auth_middleware.go  book_controller.go  cart_controller.go  order_controllers.go  user_controller.go
entity/: Cargo.toml
entity/src/: book.rs  mod.rs  prelude.rs  user.rs
internal/database/: addresses.sql.go  books.sql.go  cart.sql.go  models.go  orders.sql.go  users.sql.go
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_user.rs  m20241001_060136_create_book.rs
sql/migrations/: 20241021180110_add_users_table.sql  20241021180935_add_books_table.sql  20241021181524_add_cart_items_table.sql  20241021181542_add_orders_table.sql  20241021183347_add_order_items_table.sql  20241021183403_add_rentals_table.sql  20241021183420_add_payments_table.sql  20241021183447_add_addresses_table.sql  20241021183503_add_reviews_table.sql  20241021183537_add_wishlists_table.sql  20241022032927_add_img_url_to_books.sql  20241022060143_add_index_user_book_in_cart_items.sql  20241023035848_rename_price_col_order_items.sql
sql/queries/: addresses.sql  books.sql  cart.sql  orders.sql  users.sql
src/: main.rs
src/book/: create.rs  delete.rs  fetch.rs  mod.rs  router.rs
src/handlers/: misc_handler.rs  mod.rs  user_handler.rs
src/middleware/: jwt_auth.rs
src/misc/: health.rs  hello.rs  mod.rs  router.rs
src/models/: response.rs  user.rs
src/routes/: misc.rs  mod.rs  user.rs
src/user/: login.rs  (+4 more)
utils/: jwt_utils.go
(+4 files in other folders)
