[package]
name = "booklyst-core"
version = "0.1.0"
edition = "2021"

[workspace]
embers = [".", "migration", "entity"]

[dependencies]
axum = { version = "0.7.6", features = ["macros"] }
bcrypt = "0.15.1"
dotenvy = "0.15.7"
sea-orm = { version = "1.0.1", features = ["sqlx-postgres", "macros", "runtime-tokio-native-tls", "with-json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["macros", "full"] }

migration = { path = "migration" }
entity = { path = "entity" }
validator = { version = "0.18.1", features = ["derive"] }
thiserror = "1.0.63"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
futures-util = "0.3.30"
tower = "0.5.1"
